public/static/css/metadata/form.css
/*Panel tabs*/
.panel-tabs {
    position: relative;
    bottom: 30px;
    clear:both;
    border-bottom: 1px solid transparent;
}

.panel-tabs > li {
    float: left;
    margin-bottom: -1px;
}

.panel-tabs > li > a {
    margin-right: 2px;
    margin-top: 4px;
    line-height: .85;
    border: 1px solid transparent;
    border-radius: 4px 4px 0 0;
    color: #ffffff;
}

.panel-tabs > li > a:hover {
    border-color: transparent;
    color: #ffffff;
    background-color: transparent;
}

.panel-tabs > li.active > a,
.panel-tabs > li.active > a:hover,
.panel-tabs > li.active > a:focus {
    color: #fff;
    cursor: default;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    border-radius: 2px;
    background-color: rgba(255,255,255, .23);
    border-bottom-color: transparent;
}

.tooltip-inner {
    min-width: 100px;
    max-width: 100%;
}

.metadata-form fieldset{
    border: solid 1px #DDD !important;
    padding: 0 10px 10px 10px;
    border-bottom: 10px;
    margin-bottom: 10px;
}

legend {
    width: auto !important;
    border: none;
    font-size: 14px;
    padding: 0 5px;
    margin-bottom: 15px!important;
    color: #555!important;
}

.fa.safe {
    color: red;
    margin-top:4px;
}

.fa.safe-single {
    color: red;
    margin-top:10px;
}


.fa.checkmark-green-top-right {
    color:#00CC00;
    margin-left:5px;
    margin-top:-3px;
}

.fa.form-required-present {
    color:#00CC00;
}

.fa.form-required-missing {
    color:#F0F0F0;
}

.add-pointer {
    cursor: pointer
}

.panel-heading .input-group-sm {
    margin: -7px; /* Search box */
}
.panel-footer  .input-group-sm {
    margin: -6px; /* Search box */
}

